[gd_scene load_steps=11 format=3 uid="uid://5srayl5rcddo"]

[ext_resource type="PackedScene" uid="uid://chcmtwtia1s41" path="res://scenes/levels/base_level.tscn" id="1_4y8a2"]
[ext_resource type="FontFile" uid="uid://c5usytkhau5qg" path="res://assets/misc/Lilliput Steps.otf" id="2_edrfc"]
[ext_resource type="Script" path="res://scripts/levelScripts/level_5.gd" id="2_hlbwl"]
[ext_resource type="StyleBox" uid="uid://pl7u85rxhfye" path="res://resources/new_style_box_flat_normal.tres" id="3_jxgwd"]
[ext_resource type="StyleBox" uid="uid://dirr82n77phow" path="res://resources/new_style_box_flat_hover.tres" id="4_u42qo"]
[ext_resource type="StyleBox" uid="uid://cg54yh1dsa1xo" path="res://resources/new_style_box_flat_pressed.tres" id="5_k3urh"]
[ext_resource type="StyleBox" uid="uid://b5mq8sf7g0a5r" path="res://resources/new_style_box_empty.tres" id="6_y2h7g"]
[ext_resource type="Texture2D" uid="uid://hebch8kccpb" path="res://assets/pngs/cantaloupeblack.png" id="7_1hja5"]
[ext_resource type="AudioStream" uid="uid://bkwkex45q5w4r" path="res://assets/sounds/cantaloupe-deaf-kev-invincible.mp3" id="9_i7rys"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4quj"]
bg_color = Color(0.0235294, 0.27451, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.0755101, 0.0755101, 0.0755101, 1)

[node name="Level_5" instance=ExtResource("1_4y8a2")]
script = ExtResource("2_hlbwl")

[node name="Label" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -646.0
offset_top = 30.0
offset_right = 646.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_edrfc")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_g4quj")
text = "5) Que fruta é essa?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="." index="1"]
layout_mode = 0
offset_left = 260.0
offset_top = 372.0
offset_right = 610.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_edrfc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jxgwd")
theme_override_styles/hover = ExtResource("4_u42qo")
theme_override_styles/pressed = ExtResource("5_k3urh")
theme_override_styles/focus = ExtResource("6_y2h7g")
text = "Maçã"

[node name="Button2" type="Button" parent="." index="2"]
layout_mode = 0
offset_left = 720.0
offset_top = 372.0
offset_right = 1070.0
offset_bottom = 472.0
theme_override_fonts/font = ExtResource("2_edrfc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jxgwd")
theme_override_styles/hover = ExtResource("4_u42qo")
theme_override_styles/pressed = ExtResource("5_k3urh")
theme_override_styles/focus = ExtResource("6_y2h7g")
text = "Melancia"

[node name="Button3" type="Button" parent="." index="3"]
layout_mode = 0
offset_left = 260.0
offset_top = 513.0
offset_right = 610.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("2_edrfc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jxgwd")
theme_override_styles/hover = ExtResource("4_u42qo")
theme_override_styles/pressed = ExtResource("5_k3urh")
theme_override_styles/focus = ExtResource("6_y2h7g")
text = "Cantalupo"

[node name="Button4" type="Button" parent="." index="4"]
layout_mode = 0
offset_left = 720.0
offset_top = 513.0
offset_right = 1070.0
offset_bottom = 613.0
theme_override_fonts/font = ExtResource("2_edrfc")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("3_jxgwd")
theme_override_styles/hover = ExtResource("4_u42qo")
theme_override_styles/pressed = ExtResource("5_k3urh")
theme_override_styles/focus = ExtResource("6_y2h7g")
text = "Graviola"

[node name="TextureRect" type="TextureRect" parent="." index="5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -178.0
offset_right = 112.5
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
texture = ExtResource("7_1hja5")
expand_mode = 1
stretch_mode = 6

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("9_i7rys")
volume_db = -15.0

[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
